Bayi arayüzü finan ve  müşteriler eklendi

--- a/djangos/templates/bayi_Urunler.html
+++ b/djangos/templates/bayi_Urunler.html
@@ -276,6 +276,8 @@
               </p>
             </a>
             
+            
+            
           </li>
 
            <li class="nav-item">
@@ -299,6 +301,23 @@
                   <p>{{element4.elementName}}</p>
                 </a>
               </li>
+            </ul>
+            <li class="nav-item">
+              <a href="/bayi/bayi_Musteriler.html" class="nav-link">
+                <i class="fas fa-boxes"></i>
+                <p>
+                  {{element6.elementName}}
+                </p>
+              </a>
+            </li>
+            <li class="nav-item">
+              <a href="/bayi/bayi_Finans.html" class="nav-link">
+                <i class="fas fa-boxes"></i>
+                <p>
+                  {{element7.elementName}}
+                </p>
+              </a>
+            </li>
               
            <li class="nav-item">
             
